<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bocquet.yoann.tp1.FragmentMenu">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/offline_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/lbl_offline"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_1vIA"
            android:layout_marginStart="8dp" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/middle_guideline"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="192dp" />

        <Button
            android:id="@+id/btn_1v1"
            android:layout_width="0dp"
            android:layout_height="62dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"
            android:text="@string/btn_1V1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/middle_guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="openGame"
            android:layout_marginTop="64dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btn_1vIA"
            android:layout_width="0dp"
            android:layout_height="62dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="4dp"
            android:text="@string/btn_1VIA"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/middle_guideline"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="64dp"
            android:onClick="openGame"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp" />

        <Button
            android:id="@+id/btn_AvB"
            android:layout_width="0dp"
            android:layout_height="62dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/btn_AvB"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_1vIA"
            android:onClick="openGame"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/online_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="64dp"
            android:text="@string/lbl_online"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_AvB"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_1V1_online"
            android:layout_marginStart="8dp" />

        <Button
            android:id="@+id/btn_1V1_online"
            android:layout_width="0dp"
            android:layout_height="62dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="96dp"
            android:onClick="openGame"
            android:text="@string/btn_1V1_online"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_AvB" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>
